src/test/ui/error-codes/E0505.stderr
error[E0505]: cannot move out of `x` because it is borrowed
  --> $DIR/E0505.rs:9:13
   |
LL |         let _ref_to_val: &Value = &x;
   |                                    - borrow of `x` occurs here
LL |         eat(x); //~ ERROR E0505
   |             ^ move out of `x` occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0505`.
